--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.13.0",
     "postcss": "^8.4.49",
+    "rollup-plugin-visualizer": "^5.13.1",
     "tailwindcss": "^3.4.17",
-    "vite": "^6.0.3"
+    "vite": "^6.0.7"
   }
 }
